fix: more contrast active style

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -25,5 +25,7 @@
 }
 
 .active {
-  color: #ffffff33;
+  color: #ffd700;
+  font-weight: bold;
+  border-bottom: 2px solid #ffd700;
 }
